--- a/WeddingApp/WeddingApp/Views/UserControls/InvoiceListUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/InvoiceListUC.xaml
@@ -12,7 +12,7 @@
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedCommand}"
-                                   CommandParameter="{Binding ElementName=InvoiceListUC}" />
+                                   CommandParameter="{Binding ElementName=invoiceListUC}" />
         </i:EventTrigger>
     </i:Interaction.Triggers>
     <Grid>
@@ -119,13 +119,13 @@
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
-                            Text="{Binding WEDDINGID.BALLROOMID, UpdateSourceTrigger=PropertyChanged}"
+                            Text="{Binding INVOICEID, UpdateSourceTrigger=PropertyChanged}"
                             FontWeight="Medium"
                             Foreground="Black" />
 
                         <!--tên sảnh-->
                         <TextBlock
-                            Text="{Binding }"
+                            Text="{Binding WEDDING.GROOM}"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -135,7 +135,7 @@
                             TextWrapping="Wrap" />
                         <!--Loại sảnh-->
                         <TextBlock
-                            Text="Nguyễn Thị Tên Dài Quá"
+                            Text="{Binding WEDDING.BRIDE}"
                             FontSize="20"
                             VerticalAlignment="Center"
                             HorizontalAlignment="Center"
@@ -146,7 +146,7 @@
                         <!--SỐ LƯỢNG BÀN TỐI ĐA-->
                         <TextBlock
                             Grid.Column="3"
-                            Text="10000"
+                            Text="{Binding WEDDING.BALLROOM.BALLROOMNAME}"
                             FontSize="20"
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
@@ -154,7 +154,7 @@
                         <!--ĐƠN GIÁ BÀN TỐI THIỂU-->
                         <TextBlock
                             Grid.Column="4"
-                            Text="10000"
+                            Text="{Binding WEDDING.WEDDINGDATE, StringFormat={} {0:dd/MM/yyyy}}"
                             FontSize="20"
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
@@ -162,14 +162,14 @@
 
                         <TextBlock
                             Grid.Column="5"
-                            Text="10000"
+                            Text="{Binding WEDDING.SHIFT.SHIFTSTART}"
                             FontSize="20"
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
                             VerticalAlignment="Center" />
                         <TextBlock
                             Grid.Column="6"
-                            Text="10000"
+                            Text="{Binding WEDDING.TABLEAMOUNT}"
                             FontSize="20"
                             FontWeight="DemiBold"
                             HorizontalAlignment="Center"
