--- a/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
+++ b/WeddingApp/WeddingApp/Resources/XAML/MainResources.xaml
@@ -10,4 +10,5 @@
     <viewmodels:WeddingListVM x:Key="weddingListVM"></viewmodels:WeddingListVM>
     <viewmodels:AddHallTypeVM x:Key="addHallTypeVM"></viewmodels:AddHallTypeVM>
     <viewmodels:AddHallVM x:Key="addHallVM"></viewmodels:AddHallVM>
+    <viewmodels:HallTypeListVM x:Key="hallTypeListVM"></viewmodels:HallTypeListVM>
 </ResourceDictionary>
