--- a/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
+++ b/WeddingApp/WeddingApp/Views/UserControls/MenuUC.xaml
@@ -3,9 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
+             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
              mc:Ignorable="d"
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="710" d:DesignWidth="1120">
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid Margin="10">
@@ -16,7 +16,7 @@
                         <ColumnDefinition Width="3*" />
                     </Grid.ColumnDefinitions>
 
-                    <Grid x:Name="menu" Grid.Column="0" Margin="10 20 10 0">
+                    <Grid x:Name="menu" Grid.Column="0" Margin="20 40 10 0">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="120"></RowDefinition>
                             <RowDefinition Height="*"></RowDefinition>
