--- a/WeddingApp/WeddingApp/Views/EditWeddingHallWindow.xaml
+++ b/WeddingApp/WeddingApp/Views/EditWeddingHallWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WeddingApp.Views" xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:uc="clr-namespace:WeddingApp.Views.UserControls"
         mc:Ignorable="d"
@@ -17,9 +18,17 @@
         Foreground="{x:Null}"
         AllowsTransparency="True"
         WindowStyle="None"
+        DataContext="{StaticResource editHallVM}"
+        x:Name="editHallWD"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize"
         SizeToContent="Height">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}"
+                                   CommandParameter="{Binding ElementName=editHallWD}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <materialDesign:TransitioningContent OpeningEffect="{materialDesign:TransitionEffect Kind=ExpandIn,Duration=0:0:0.2}">
         <Grid>
             <Grid Margin="10">
@@ -162,8 +171,8 @@
                             Margin="0 20 0 0"
                             FontSize="20"
                             Foreground="White"
-                            Command="{Binding SaveInfoCommand}"
-                            CommandParameter="{Binding ElementName=changeInfoWD}">
+                            Command="{Binding EditHallCommand}"
+                            CommandParameter="{Binding ElementName=editHallWD}">
                             </Button>
                         </StackPanel>
                     </Grid>
